--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,3 +1,7 @@
+import = [
+    "~/.config/alacritty/themes/themes/google.toml"
+]
+
 [shell]
 args = ['--login']
 program = "/usr/bin/zsh"
@@ -24,20 +28,3 @@ y = 0
 columns = 140
 lines = 46
 
-[colors.normal]
-black = "#21222c"
-red = "#ff5555"
-green = "#50fa7b"
-yellow = "#f1fa8c"
-blue = "#bd93f9"
-magenta = "#ff79c6"
-cyan = "#8be9fd"
-white = "#f8f8f2"
-
-[colors.primary]
-background = "#282a36"
-foreground = "#f8f8f2"
-
-[colors.cursor]
-text = "CellBackground"
-cursor = "CellForeground"
