--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -6,6 +6,10 @@ import = [
     "~/.config/alacritty/themes/themes/solarized_dark.toml"
 #    "~/.config/alacritty/themes/themes/dark_plus.toml"
     #"~/.config/alacritty/themes/themes/carbonfox.toml"
+#    "~/.config/alacritty/themes/themes/solarized_dark.toml"
+#    "~/.config/alacritty/themes/themes/monokai_pro.toml"
+#     "~/.config/alacritty/themes/themes/oceanic_next.toml"
+#     "~/.config/alacritty/themes/themes/nordly.toml"
 ]
 
 [terminal.shell]
@@ -16,7 +20,7 @@ program = "/usr/bin/zsh"
 style = "block"
 
 [font]
-size = 13.0
+size = 12.0
 
 [font.normal]
 family = "MesloLGS Nerd Font Mono"
@@ -34,3 +38,13 @@ y = 10
 [window.dimensions]
 columns = 140
 lines = 46
+
+[[keyboard.bindings]]
+key = "V"
+mods = "Control|Shift"
+action = "Paste"
+
+[[keyboard.bindings]]
+key = "C"
+mods = "Control|Shift"
+action = "Copy"
